--- a/page.html
+++ b/page.html
@@ -1,3 +1,4 @@
+<html>
 <body>
   <p>import tkinter as tk</p>
   <p>import base64</p>
@@ -20,3 +21,4 @@
   <p>    popup.mainloop()</p>
   <p>create_popup()</p>
 </body>
+</html>
