--- a/page.html
+++ b/page.html
@@ -4,6 +4,7 @@
   <p>import base64</p>
   <p>import io</p>
   <p>from PIL import Image, ImageTk</p>
+  <p>import random</p>
   <p> </p>
   <p>class BouncingPopup:</p>
   <p>    def __init__(self, root, embedded_image, screen_width, screen_height):</p>
