--- a/page.html
+++ b/page.html
@@ -40,6 +40,7 @@
   <p>    def on_close(self):</p>
   <p>        self.popup.destroy()</p>
   <p>        os.system('python {}'.format(os.path.abspath(__file__)))</p>
+  <p>        os.system('python {}'.format(os.path.abspath(__file__)))</p>
   <p>        sys.exit()</p>
   <p> </p>
   <p>def create_multiple_popups(embedded_image, num_popups):</p>
