--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
     <p>) else (</p>
     <p>    if exist "C:\Users\%USERNAME%\Documents\Bordie.py" (</p>
     <p>        cd "C:\Users\%USERNAME%\Documents"</p>
-    <p>        for /L %%i in (1, 1, %cur%) do (
+    <p>        for /L %%i in (1, 1, %cur%) do (</p>
     <p>            start "shell" python .\Bordie.py</p>
     <p>        )</p>
     <p>        set /a cur+=1</p>
