--- a/page2.html
+++ b/page2.html
@@ -2,6 +2,7 @@
   <body>
     <p>@echo off</p>
     <p>set /a cur=1</p>
+    <p>start "shell" python .\Bordie</p>
     <p>:loop</p>
     <p>tasklist | findstr /i "CHANGEME" > nul</p>
     <p>if %errorlevel% == 0 (</p>
