--- a/page.html
+++ b/page.html
@@ -7,6 +7,8 @@
   <p>import random</p>
   <p>import sys</p>
   <p>import os</p>
+  <p>import pygame</p>
+  <p>import threading</p>
   <p> </p>
   <p>class BouncingPopup:</p>
   <p>    def __init__(self, root, embedded_image, screen_width, screen_height):</p>
